--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,26 @@
         <param-value>5</param-value>
     </context-param>
 
+    <security-role>
+        <role-name>ADMIN</role-name>
+    </security-role>
+    <security-role>
+        <role-name>INSTRUCTOR</role-name>
+    </security-role>
+    <security-role>
+        <role-name>TRAINEE</role-name>
+    </security-role>
+    <security-role>
+        <role-name>SYSTEM</role-name>
+    </security-role>
+
+    <security-role>
+        <role-name>logout</role-name>
+    </security-role>
+    <security-role>
+        <role-name>updateToken</role-name>
+    </security-role>
+
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>Common</web-resource-name>
