--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <jakartaee>8.0</jakartaee>
         <org.projectlombok.version>1.18.16</org.projectlombok.version>
         <hibernateVer>5.4.29.Final</hibernateVer>
+        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
     </properties>
 
     <dependencies>
@@ -76,6 +77,11 @@
             <artifactId>nimbus-jose-jwt</artifactId>
             <version>9.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -98,6 +104,11 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok-mapstruct-binding</artifactId>
                             <version>0.2.0</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${org.mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
                     <compilerArguments>
