Grant, revoke, switch access type implemented

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,6 +69,15 @@
     <security-role>
         <role-name>editOtherEmail</role-name>
     </security-role>
+    <security-role>
+        <role-name>switchAccessType</role-name>
+    </security-role>
+    <security-role>
+        <role-name>grantAccessType</role-name>
+    </security-role>
+    <security-role>
+        <role-name>revokeAccessType</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
