--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,11 @@
         <param-value>5</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>codeExpirationTime</param-name>
+        <param-value>24</param-value>
+    </context-param>
+
     <security-role>
         <role-name>ADMIN</role-name>
     </security-role>
