Bug fixes after testing MOK

--- a/src/main/resources/app.config.properties
+++ b/src/main/resources/app.config.properties
@@ -13,9 +13,9 @@ email.endpoint.password_reset=account/resetPassword
 
 #email properties
 email.property.uri=https://localhost:8181/resources
-email.property.host=smtp.gazeta.pl
-email.property.port=465
-email.property.sender=driving_school@gazeta.pl
+email.property.host=smtp.gmail.com
+email.property.port=587
+email.property.sender=drivingschool224323@gmail.com
 email.property.password=zaq1@WSX
 
 #password
