--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -116,6 +116,9 @@
     <security-role>
         <role-name>confirmPayment</role-name>
     </security-role>
+    <security-role>
+        <role-name>rejectPayment</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
