--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -119,6 +119,9 @@
     <security-role>
         <role-name>rejectPayment</role-name>
     </security-role>
+    <security-role>
+        <role-name>getPaymentsForApproval</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
