addPayment implementation part 1

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -122,6 +122,9 @@
     <security-role>
         <role-name>getPaymentsForApproval</role-name>
     </security-role>
+    <security-role>
+        <role-name>getUnderpayments</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
