--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -125,6 +125,9 @@
     <security-role>
         <role-name>getUnderpayments</role-name>
     </security-role>
+    <security-role>
+        <role-name>addPayment</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
