--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -128,6 +128,9 @@
     <security-role>
         <role-name>addPayment</role-name>
     </security-role>
+    <security-role>
+        <role-name>addCar</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
