--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -141,10 +141,16 @@
         <role-name>getCar</role-name>
     </security-role>
     <security-role>
-        <role-name>getTraineeForGroup</role-name>
+        <role-name>getTraineesForGroup</role-name>
     </security-role>
     <security-role>
         <role-name>createLectureGroup</role-name>
+    </security-role>
+    <security-role>
+        <role-name>getLectureGroups</role-name>
+    </security-role>
+    <security-role>
+        <role-name>getLectureGroup</role-name>
     </security-role>
 
     <security-constraint>
