--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -164,6 +164,9 @@
     <security-role>
         <role-name>cancelDrivingLesson</role-name>
     </security-role>
+    <security-role>
+        <role-name>getBriefCourseInfo</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
