--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -170,6 +170,9 @@
     <security-role>
         <role-name>getAllInstructors</role-name>
     </security-role>
+    <security-role>
+        <role-name>getInstructorPermissions</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
