--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -9,6 +9,7 @@
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next": "^20.2.4",
     "react-i18next": "^9.0.10",
+    "react-bootstrap": "^1.6.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
