--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -9,10 +9,13 @@
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next": "^20.2.4",
     "react-i18next": "^9.0.10",
-    "react-bootstrap": "^1.6.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "bootstrap": "^4.6.0",
+    "node-sass": "^6.0.0",
+    "react-bootstrap": "^1.5.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
