--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -15,6 +15,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-router-dom": "^5.1.2",
+    "react-router-guards": "^1.0.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
