--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-guards": "^1.0.2",
     "uuid": "^8.3.2",
+    "jwt-decode": "^3.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
