--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -2,11 +2,13 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:8181",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "i18next-browser-languagedetector": "^6.1.1",
+    "axios": "^0.21.1",
     "i18next": "^20.2.4",
     "react-i18next": "^9.0.10",
     "bootstrap": "^4.6.0",
