changeLanguage implemented, navbar implementation begins

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -185,6 +185,9 @@
     <security-role>
         <role-name>generateReport</role-name>
     </security-role>
+    <security-role>
+        <role-name>editLanguage</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
