--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "react-router-dom": "^5.1.2",
     "react-router-guards": "^1.0.2",
+    "react-router-bootstrap": "^0.25.0",
     "uuid": "^8.3.2",
     "jwt-decode": "^3.1.2",
     "web-vitals": "^2.1.4"
