--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "i18next-browser-languagedetector": "^6.1.1",
     "axios": "^0.21.1",
     "i18next": "^20.2.4",
