--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-bootstrap": "^0.25.0",
     "uuid": "^8.3.2",
     "jwt-decode": "^3.1.2",
+    "formik": "^2.2.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
