--- a/src/main/resources/app.config.properties
+++ b/src/main/resources/app.config.properties
@@ -13,10 +13,11 @@ email.endpoint.password_reset=account/resetPassword
 
 #email properties
 email.property.uri=https://localhost:8181/resources
-email.property.host=smtp.gmail.com
+email.property.host=smtp.mail.yahoo.com
 email.property.port=587
-email.property.sender=drivingschool224323@gmail.com
-email.property.password=zaq1@WSX
+email.property.sender=drivingschool224323@yahoo.com
+email.property.username=drivingschool224323
+email.property.password=clwkorymujoyzkmm
 
 #password
 password.reset_seconds_limit=1200000
