--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,11 @@
         <param-value>24</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>amountOfAdvance=</param-name>
+        <param-value>0.5</param-value>
+    </context-param>
+
     <security-role>
         <role-name>ADMIN</role-name>
     </security-role>
