--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -25,6 +25,7 @@
     "uuid": "^8.3.2",
     "jwt-decode": "^3.1.2",
     "formik": "^2.2.7",
+    "query-string": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
