--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -26,6 +26,10 @@
     "jwt-decode": "^3.1.2",
     "formik": "^2.2.7",
     "query-string": "^7.0.0",
+    "moment": "^2.29.1",
+    "react-datepicker": "^4.1.1",
+    "date-fns": "^2.22.1",
+    "react-select": "^4.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
