--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -30,6 +30,8 @@
     "react-datepicker": "^4.1.1",
     "date-fns": "^2.22.1",
     "react-select": "^4.3.1",
+    "chart.js": "^3.8.0",
+    "react-chartjs-2": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
