--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -32,6 +32,7 @@
     "react-select": "^4.3.1",
     "chart.js": "^3.8.0",
     "react-chartjs-2": "^4.2.0",
+    "react-timetable-events": "2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
