getCalendar backend implemented

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -205,6 +205,9 @@
     <security-role>
         <role-name>getGroupCalendar</role-name>
     </security-role>
+    <security-role>
+        <role-name>getCalendar</role-name>
+    </security-role>
 
     <security-constraint>
         <web-resource-collection>
